[package]
name = "runsys"
version = "0.1.0"
edition = "2024"
resolver = "2" 

[dependencies]
anyhow = "1.0.101"
clap = {version="4.5.59",features=["derive"]}
libc = "0.2"
log = "0.4.29"
nix = { version = "0.31.1", features = [
    "process",  
    "fs",       
    "mount",    
    "term",     
    "sched",    
    "ioctl"
] }
oci-spec = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
